# student-management-system

./: Dockerfile  README.md  database.toml  docker-compose.yml  pyproject.toml  redis.toml  requirements.txt  run.py
core/database/: database.py
designs/: singleton.py
doc/: introduction.txt
helper/: descriptors.py  enums.py  messages.py
kernel/: database.py  student.py
kernel/models/: student.py
log/: config.toml
services/brockerservices/rabbitMQ/consumer/: __init__.py  reciever.py
services/brockerservices/rabbitMQ/producer/: __init__.py  sender.py
services/cachservices/redis/: __init__.py  redis.py
tests/: test_descriptors.py  test_student.py
